# web-search-gym

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  Makefile  README.md  pyproject.toml
agents/: base.py  registry.py
agents/_template/: agent.py  config.yaml
agents/agent_dd/: agent.py  config.yaml
agents/chroma_agent/: agent.py  config.yaml
agents/exa_deep/: agent.py  config.yaml
agents/lean_searcher/: agent.py  config.yaml
bench/: browsecomp.py  cli.py  compare.py  deepresearch.py  deepsearchqa.py  filterbench.py  regrade.py  runner.py  splits.yaml
bench/filterbench/: test.jsonl
core/: __init__.py  agent_dd_harness.py  agent_dd_prompts.py  agent_dd_tools.py  browse.py  chroma_harness.py  chroma_tools.py  console.py  context.py  exa_client.py  extractor.py  gemini_client.py  harness.py  prompts.py  tools.py  trace.py  types.py
docs/: agent-dd-dsqa.md  chroma-agent-eval.md  filterbench-v1-pre-reformulation.md  filterbench-v2-post-reformulation.md  filterbench-v3-thinking-ablation.md
models/: claude_haiku.yaml  claude_sonnet.yaml  exa_deep.yaml  exa_deep_lite.yaml  exa_deep_reasoning.yaml  qwen3_14b_base.yaml  qwen3_8b_base.yaml
results/scores/: chroma_agent__searcher-claude_sonnet__extractor-claude_sonnet__fb_v3c.json  exa_deep__searcher-exa_deep__extractor-claude_sonnet__20260418_212110.json  (+17 more)
rl/: README.md
sft/: augment_thinking.py  convert.py  serve.py  train.py
synth/: generate.py  generate_agent_dd.py  gold_path_generation.py  rewrite_questions.py
tests/: conftest.py  test_bench.py  test_convert.py  test_core_parity.py  test_harness.py
(+3 files in other folders)
